# SkryimMCM

./: .gitignore  CHARACTER_BLUEPRINT_SPEC.json  CLAUDE.md  README.md  ROADMAP.md  STATUS.md  USAGE.md  build_release.ps1  package.json  project_dashboard.html  project_work_items.json  skyrim_mcp.sln  skyrim_mcp_structure.txt
.github/workflows/: build.yml
SkyrimMCP/: IPipeClient.cs  PipeClient.cs  Program.cs  SkyrimMCP.csproj  SkyrimOffsets.cs  SkyrimTools.cs
SkyrimMCP/Tools/: CombatTools.cs  InventoryTools.cs  NPCTools.cs  PapyrusTools.cs  PlayerTools.cs  QuestTools.cs  ToolBase.cs  UtilityTools.cs  WorldTools.cs
SkyrimMCPPlugin/: CMakeLists.txt  CMakePresets.json  vcpkg.json
SkyrimMCPPlugin/src/: CombatAnalysis.cpp  CombatAnalysis.h  EventSystem.cpp  EventSystem.h  GameInterface.cpp  GameInterface.h  Helpers.h  InventoryManager.cpp  InventoryManager.h  Main.cpp  NPCManager.cpp  NPCManager.h  PapyrusBridge.cpp  PapyrusBridge.h  PipeServer.cpp  PipeServer.h  PlayerQueries.cpp  PlayerQueries.h  Protocol.cpp  Protocol.h  QuestManager.cpp  QuestManager.h  TaskQueue.cpp  TaskQueue.h  UIManager.cpp  UIManager.h  UtilityManager.cpp  UtilityManager.h  WorldManager.cpp  WorldManager.h
src/: console-injector.ts  index.ts  memory-reader.ts  skyrim-offsets.ts  types.ts
